--- a/base/css/estilo.css
+++ b/base/css/estilo.css
@@ -8,12 +8,12 @@
     color: #ffffff;
     font-style:Verdana;
     font-weight:bold ;
-    font-size: 45;
+    font-size: 45px;
 }
 
 
 .texto-about
 {color: white;
 font-family: Verdana;
-font-size: 25
+font-size: 25px;
 ;}
