--- a/base/css/estilo.css
+++ b/base/css/estilo.css
@@ -1,5 +1,6 @@
 .div-cadastro{
    
+        position: relative;
         float: right;
         height: 70vh;
         width: 50%;
@@ -11,10 +12,29 @@
 }
 
 h2{
+    position: absolute;
+    left: 222px;
     text-align: center;
-    margin-top: 70px;
+    margin-top: 124px;
     color: #ffffff;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 50px;
+    font-size: 75px;
+
+}
+
+.button-send{
+    position: absolute;
+    top: 557px;
+    left: 272px;
+    width: 230px;
+    height: 85px;
+    background-color: #1e2836;
+    color: #ffffff;
+    padding: 10px 20px;
+    font-size: 20px;
+    cursor: pointer;
+    border-radius: 8px;
+    
+    border-color: #ffffff;
 
 }
