--- a/base/css/estilo.css
+++ b/base/css/estilo.css
@@ -4,9 +4,10 @@ html{
 }
 header{
     background-image: url(../img/banner-1280×640.png);
+    background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 1600px;
+    background-size: cover;
     display: flex;
     align-items: center;
     height: 200px;
