--- a/base/css/estilo.css
+++ b/base/css/estilo.css
@@ -51,3 +51,10 @@ nav ul li a img {
     width: 80px;
     height: auto;
 }
+header h1 {
+    font-family: sans-serif;
+    font-size: 50px;
+    color: #fff;
+    margin-left: 8%;
+    margin-right: 170px;
+}
