--- a/base/css/estilo.css
+++ b/base/css/estilo.css
@@ -1,4 +1,3 @@
-
 .section-about {
   width: 50%;
   background-color: #1f2837;
@@ -19,50 +18,44 @@
   font-size: 25px;
 }
 
-ul {
+.img-about {
   width: 1px;
-  margin: 0 auto;
-  max-width: 30px;
-  max-height: 10px;
 }
 
 img {
-  margin-left: 280px;
+  margin-left: 670px;
   height: 50px;
+  margin-top: 20px;
 }
 
-
 .box {
-    width: 740px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-sizing:  border-box;
-    font-size: 16px;
-    margin-left: 10px;
-
+  width: 740px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  font-size: 16px;
+  margin-left: 10px;
 }
 
 .atencao {
-    color: red;
-    margin-left: 10px;
+  color: red;
+  margin-left: 10px;
 }
-.div-cadastro{
-   
-        float: right;
-        height: 70vh;
-        width: 50%;
-        background-color: rgba(30, 40, 54, 0.85);
-        margin-top: 50px; /* Desce a div 50px */
-        clear: right;
-      
-
+.div-cadastro {
+  float: right;
+  height: 70vh;
+  width: 50%;
+  background-color: rgba(30, 40, 54, 0.85);
+  margin-top: 50px; /* Desce a div 50px */
+  clear: right;
 }
 
-h2{
-    text-align: center;
-    margin-top: 70px;
-    color: #ffffff;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 50px;
+h2 {
+  text-align: center;
+  margin-top: 70px;
+  color: #ffffff;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 50px;
 }
