--- a/base/css/estilo.css
+++ b/base/css/estilo.css
@@ -11,19 +11,19 @@ header{
     background-size: cover;
     display: flex;
     align-items: center;
+    column-gap: 15%;
+    padding-left: 12%;
     height: 200px;
 }
-header h1{
+header .titulo{
     font-family: sans-serif;
     font-size: 50px;
     color: #fff;
-    margin-left: 8%;
+    margin: 0;
 }
 header > nav > ul{
     display: flex;
     list-style: none;
-    column-gap: 20px;
-    margin: 20px;
     padding: 0;
 }
  
@@ -34,7 +34,6 @@ header > nav{
     justify-content: center;
     display: flex;
     padding: 0;
-    margin-left: 5%;
 }
 nav ul {
     list-style: none;
