--- a/base/css/estilo.css
+++ b/base/css/estilo.css
@@ -38,6 +38,8 @@ body, html {
     color: #fff;
     text-decoration: none;
     font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight:900
    
 }
 /*Configura botões com exibição flexivel.*/
@@ -48,3 +50,4 @@ body, html {
     justify-content: space-around;
     flex-wrap: wrap;
 }
+
