--- a/base/css/estilo.css
+++ b/base/css/estilo.css
@@ -1,61 +1,45 @@
-.section-about {
-  width: 50%;
-  background-color: #1f2837;
-
-  padding: 8px 24px;
-}
-
-.about-h2 {
-  color: #ffffff;
-  font-style: verdana;
-  font-weight: bold;
-  font-size: 45px;
-}
-
-.texto-about {
-  color: white;
-  font-family: Verdana;
-  font-size: 25px;
-}
-
-.img-about {
-  width: 1px;
-}
-
-img {
-  margin-left: 670px;
-  height: 50px;
-  margin-top: 20px;
-}
-
-.box {
-  width: 740px;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+* {
   box-sizing: border-box;
-  font-size: 16px;
-  margin-left: 10px;
-}
-
-.atencao {
-  color: red;
-  margin-left: 10px;
-}
-.div-cadastro {
-  float: right;
-  height: 70vh;
-  width: 50%;
-  background-color: rgba(30, 40, 54, 0.85);
-  margin-top: 50px; /* Desce a div 50px */
-  clear: right;
-}
-
-h2 {
-  text-align: center;
-  margin-top: 70px;
+  padding: 0;
+  margin: 0;
+  background-color: #1e2836d9;
   color: #ffffff;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 50px;
+}
+
+.item {
+  border: 1px solid #ffffff;
+  font-size: 1.25em;
+  font-weight: normal;
+}
+
+.container-esquerdo{
+  width: 50%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.help{
+  flex: 1;
+}
+
+.about{
+  flex: 1;
+}
+
+.container{
+  display: flex;
+}
+
+.cadastro{
+  flex: 1;
+  border: 1px solid #ffffff;
+}
+
+.titulo-about{
+  padding: 20px;
+}
+
+.about > p{
+  padding-left: 40px;
 }
