--- a/base/css/estilo.css
+++ b/base/css/estilo.css
@@ -40,7 +40,8 @@ body {
 }
 
 h2 {
-  left: 1300px;
+  justify-content: center;
+  margin-left: 30px;
   top: 120px;
   text-align: center;
   margin-top: 80px;
@@ -53,6 +54,7 @@ h2 {
 
 .button-send {
   position: relative;
+  justify-content: center;
   align-items: center;
   top: 320px;
   left: 30px;
