--- a/base/css/estilo.css
+++ b/base/css/estilo.css
@@ -4,7 +4,6 @@
   box-sizing: border-box;
 }
 
-
 body {
   justify-content: center;
   align-items: center;
@@ -12,155 +11,84 @@ body {
   margin: 0;
 }
 
-html{
-    margin: 0;
-    padding: 0;
-}
-header{
-    background-image: url(../img/banner-1280×640.png);
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    align-items: center;
-    column-gap: 15%;
-    padding-left: 12%;
-    height: 200px;
-}
-header .titulo{
-    font-family: sans-serif;
-    font-size: 50px;
-    color: #fff;
-    margin: 0;
-}
-header > nav > ul{
-    display: flex;
-    list-style: none;
-    padding: 0;
-}
- 
-header > nav{
-    border-radius: 20px;
-    height: 100px;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    padding: 0;
-}
-nav ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    align-items: center;
-}
-nav ul li {
-    margin-left: 50px;
-}
-nav ul li:first-child{
-    margin-left: 0; 
-}
-nav > ul > li > a > img {
-    width: 80px;
-    margin: 0;
-    height: auto;
-}
-header h1 {
-    font-family: sans-serif;
-    font-size: 50px;
-    color: #fff;
-    margin-left: 8%;
-    margin-right: 170px;
-}
-nav ul li:first-child {
-    margin-left: 30px;
+html {
+  margin: 0;
+  padding: 0;
 }
 
-.section-about {
-  width: 50%;
-  background-color: #1f2837;
-
-  padding: 8px 24px;
+header {
+  background-image: url(../img/banner-1280×640.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 12%; /* Adicionado padding uniforme */
+  height: 200px;
 }
 
-.about-h2 {
-  color: #ffffff;
-  font-style: verdana;
-  font-weight: bold;
-  font-size: 45px;
+header .titulo {
+  font-family: sans-serif;
+  font-size: 50px;
+  color: #fff;
+  margin: 0;
 }
 
-.texto-about {
-  color: white;
-  font-family: Verdana;
-  font-size: 25px;
+header nav ul {
+  display: flex;
+  list-style: none;
+  padding: 0;
 }
 
-ul {
-  width: 1px;
-  margin: 0 auto;
-  max-width: 30px;
-  max-height: 10px;
-}
-
-img {
-  margin-left: 280px;
-  height: 50px;
-}
-
-
-.box {
-    width: 740px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-sizing:  border-box;
-    font-size: 16px;
-    margin-left: 10px;
-
-
-.box-cadastro {
-  width: 690px;
-  padding: 10px;
-  top: 100px;
-  border: 5px solid rgb(170, 160, 160);
-  border-radius: 5px;
-  box-sizing: border-box;
-  font-size: 16px;
-  margin-left: 10px;
-  background-color: white;
-}
-
-.atencao {
+header nav ul li {
   margin-left: 30px;
-  color: red;
-  float: left;
 }
+
+header nav ul li:first-child {
+  margin-left: 0;
+}
+
+header nav ul li a img {
+  width: 80px;
+  height: auto;
+}
+
 .div-cadastro {
   position: relative;
   float: right;
   height: 70vh;
   width: 50%;
   background-color: #3f4855;
-  margin-top: 50px; /* Desce a div 50px */
-  clear: right;
+  padding: 20px; /* Adicionado padding para melhorar a aparência */
+  color: #ffffff;
   text-align: center;
 }
 
 h2 {
-  justify-content: center;
-  margin-left: 30px;
-  top: 120px;
-  text-align: center;
-  margin-top: 80px;
+  margin-top: 70px;
   color: #ffffff;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-
-  font-size: 60px;
+  font-family: roboto;
+  font-size: 70px;
+  text-align: center;
 }
 
+.box-cadastro {
+  width: 680px;
+  padding: 10px;
+  border: 5px solid #ccc;
+  border-radius: 5px;
+  font-size: 30px;
+  margin-left: 10px;
+  background-color: white;
+}
+
+.atencao {
+  color: red;
+  font-size: 20px;
+  margin-left: 10px;
+  float: left;
+}
 
 .button-send {
   position: relative;
@@ -178,59 +106,3 @@ h2 {
   border-color: #ffffff;
   font-size: 50px;
 }
-
-h2{
-    text-align: center;
-    margin-top: 70px;
-    color: #ffffff;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 50px;
-}
-
-
-body{
-    min-width: 519px;
-}
-
-#cabecalho{
-    background-color: #151638;
-    height: 190px;
-    position: relative;
-    /* Aninhamento de seletores */
-    h1{
-        color: #fff;
-        float: left;
-        position: absolute;
-        top: 40%;
-        left: 10%;
-    }
-
-    nav{
-        float: right;
-        position: absolute;
-        top: 50%;
-        right: 10%;
-    }
-    
-    .link{ 
-        display: inline;
-        a{
-            color: #fff;
-        }
-
-        &:hover{
-            background-color: brown;
-        }
-    }
-}
-
-
-
-/* Adicione um efeito ao elemento h1 que está aninhado ao elemento #cabecalho. */
-
-/* Adicione um efeito aos elementos a que estão aninhados aos elementos li que são filhos de ul que é filha de nav que é filha de #cabecalho. */
-
-/* #cabecalho nav ul li a{
-    color: #fff;
-} */
-
