--- a/base/css/estilo.css
+++ b/base/css/estilo.css
@@ -7,13 +7,12 @@
   font-family: sans-serif;
 }
 
-
-body{
-  color:#1e2836;
-  background-color:#1e2836;
+body {
+  color: #1e2836;
+  background-color: #1e2836;
 }
 
-header{
+header {
   background-color: #1e2836;
   height: 15vh;
 }
@@ -53,7 +52,7 @@ header{
   margin: 20px;
 }
 
-.img-about{
+.img-about {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -63,14 +62,14 @@ header{
   padding: 20px;
 }
 
-.img-about > img{
+.img-about > img {
   width: 40px;
   justify-content: end;
   align-items: end;
   cursor: pointer;
 }
 
-.container{
+.container {
   display: flex;
 }
 
@@ -79,51 +78,37 @@ header{
   flex: 1;
 }
 
-footer {
-  background-color: #1e2836;
-  height: 15vh;
-
-*{
-    padding: 0;
-    margin: 0;
-}
-
-#container{
-    color: white;
-    background-color: #1e2837;
-    width: 600px;
-    height: 230px;
-    padding: 7px 20px;
+#container {
+  color: white;
+  background-color: #1e2837;
+  width: 600px;
+  height: 230px;
+  padding: 7px 20px;
 }
 
 .logo-help img {
-    width: 30px;   
-    float: right; 
-    padding: 2px;
+  width: 30px;
+  float: right;
+  padding: 2px;
 }
 
-.titulo-help{
-
-font-family:'Lucida Sans Regular';
-font-size: 30px;
-font-style: bold;
+.titulo-help {
+  font-family: "Lucida Sans Regular";
+  font-size: 30px;
+  font-style: bold;
 }
 
-p{
-    padding: 35px;
-    font-size: 20px;
-    font-family:'Lucida Sans Regular';
-    font-style: normal;
+p {
+  padding: 35px;
+  font-size: 20px;
+  font-family: "Lucida Sans Regular";
+  font-style: normal;
 }
 
-hr{
-
-    border: 1px solid black;
-    display: flex;
+hr {
+  border: 1px solid black;
+  display: flex;
 }
-
- 
-
 
 body {
   justify-content: center;
@@ -202,7 +187,6 @@ h2 {
   font-size: 30px;
   margin-left: 10px;
   background-color: white;
-
 }
 
 .atencao {
@@ -228,4 +212,6 @@ h2 {
   border-color: #ffffff;
   font-size: 50px;
 }
-
+footer {
+  /*esse footer tava bugando tudo, precisei tirar e coloquei aqui em baixo para referencia de quem criou ele*/
+}
