--- a/base/css/estilo.css
+++ b/base/css/estilo.css
@@ -215,3 +215,11 @@ h2 {
 footer {
   /*esse footer tava bugando tudo, precisei tirar e coloquei aqui em baixo para referencia de quem criou ele*/
 }
+
+.h1-about {
+  padding: 20px 20px 20px 20px
+}
+
+.p-about {
+  padding: 0px 40px 40px 40px;
+}
